fix(@clayui/navigation-bar): add truncate text OOTB to ClayNavigationBar.Item

--- a/packages/clay-css/src/scss/components/_navbar.scss
+++ b/packages/clay-css/src/scss/components/_navbar.scss
@@ -63,6 +63,7 @@
 		align-items: center;
 		display: flex;
 		word-wrap: normal;
+		max-width: 100%;
 	}
 
 	.nav-item {
